# BinaryDB

./: CMakeLists.txt  README.md  main.cpp  server.cpp  server.hpp  storage.cpp  storage.hpp
proto/: db.pb.cc  db.pb.h  db.proto
